# mcp_project

./: LICENSE  README.md
mcp_api/: Dockerfile  Makefile  main.py  requirements.txt  run_server.py
mcp_api/agents/: planner_agent.py  research_agent.py  supervisor_agent.py
mcp_api/core/: agent.py  orchestrator.py  policy.py
mcp_api/tools/: base.py  echo.py  file.py  math.py  search.py  time.py
mcp_claude_ai/: Cargo.toml  README.md
mcp_claude_ai/app_info/: file-structure.txt
mcp_claude_ai/src/: main.rs
mcp_claude_ai/static/: app.js  index.html  styles.css
mcp_cli/: run_server.py
mcp_cli/agents/: supervisor_agent.py
mcp_cli/core/: config.py  context.py  model_router.py  orchestrator.py  policy.py
mcp_cli/storage/: sqlite_backend.py
mcp_rust_v1_3/: Cargo.toml
mcp_rust_v1_3/src/: agent.rs  context.rs  db.rs  main.rs  model.rs  orchestrator.rs
