[package]
name = "model_context_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = "0.7.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
surrealdb = { version = "1.1.1", features = ["kv-mem"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.11.23", features = ["json"] }
dotenv = "0.15.0"
