[package]
name = "mcp_rust"
version = "0.3.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
rusqlite = "0.29"
axum = "0.7"
tower = "0.4"
hyper = { version = "1", features = ["full"] }